Continued work on top nav bar begun work on second

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-Target.com
-<target-topnavbar>Loading Check 1, 2.</target-topnavbar>
+<target-topnavbar></target-topnavbar>
+<target-secondarynavbar></target-secondarynavbar>
