--- a/src/app/header/topnavbar.component.html
+++ b/src/app/header/topnavbar.component.html
@@ -1,26 +1,111 @@
-<nav class = "navbar navbar-light" style="background-color: #cc0000;">
-    <div class = "container-fluid">
-        <ul class = "nav">
-            <li class = "nav-item">
-                <a href = "" class = "nav-link text-white">Categories</a>
-            </li>
-            <li class = "nav-item">
-                <a href = "" class = "nav-link text-white">Deals</a>
-            </li>
-            <li class = "nav-item">
-                <a href = "" class = "nav-link text-white">What's New</a>
-            </li>
-            <li class = "nav-item">
-                <a href = "" class = "nav-link text-white">Pickup & Delivery</a>
-            </li>
-            <div class="btn-group">
-                <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Large button
-                </button>
-                <div class="dropdown-menu">
-                  ...
+<nav class="navbar navbar-light" style="background-color: #cc0000;">
+    <div class="container-fluid">
+        <ul class="nav">
+
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Categories
+                  </button>
+
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item" href="#">Celebrate Black History Month</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Valentine's Day</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Health & Wellness</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Grocery</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Women</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Men</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Young Adult</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Kids</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Shoes</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Baby</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Home</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Patio & Garden</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Furniture</a>
                 </div>
-              </div>
+            </div>
+
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Deals
+                  </button>
+
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item" href="#">Clearance</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Weekly Ad</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Top Deals</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">RedCard Exclusives</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Target Circle Offers</a>
+                </div>
+            </div>
+
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    What's New
+                  </button>
+
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item" href="#">#TargetStyle</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Women's New Arrivals</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Beauty New Arrivals</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Kids' New Arrivals</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Men's New Arrivals</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Home New Arrivals</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Target Finds</a>
+                </div>
+            </div>
+
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Pickup & Delivery
+                  </button>
+
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item" href="#">Order Pickup</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Same Day Delivery</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Drive Up</a>
+                </div>
+            </div>
+
         </ul>
+
+
+        <form>
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search">
+                <span class="input-group-text">
+                    <svg class="bi" width="32" height="32" fill="currentColor">
+                        <use xlink:href="assets/bootstrap-icons.svg#search"/>
+                      </svg>
+                </span>
+            </div>
+
+            <svg class="bi" width="32" height="32" fill="currentColor">
+                <use xlink:href="bootstrap-icons.svg#cart3"/>
+              </svg>
+        </form>
     </div>
 </nav>
