--- a/src/app/header/topnavbar.component.html
+++ b/src/app/header/topnavbar.component.html
@@ -1,13 +1,20 @@
-<nav class="navbar navbar-light" style="background-color: #cc0000;">
+<nav class="navbar navbar-light" style="background-color: #e40a0a;">
     <div class="container-fluid">
         <ul class="nav">
+            <li class="nav-item">
+                <a href="" class="nav-link text-white">
+                    <img src="assets/Color-Target-logo.png" alt="" width="54" height="48">
+                </a>
+            </li>
 
-            <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                    data-bs-toggle="dropdown " aria-expanded="false">
                     Categories
-                  </button>
-
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="#">Celebrate Black History Month</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Valentine's Day</a>
@@ -33,15 +40,15 @@
                     <a class="dropdown-item" href="#">Patio & Garden</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Furniture</a>
-                </div>
-            </div>
+                </ul>
+            </li>
 
-            <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                    data-bs-toggle="dropdown" aria-expanded="false">
                     Deals
-                  </button>
-
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="#">Clearance</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Weekly Ad</a>
@@ -51,15 +58,16 @@
                     <a class="dropdown-item" href="#">RedCard Exclusives</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Target Circle Offers</a>
-                </div>
-            </div>
+                </ul>
+            </li>
 
-            <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                    data-bs-toggle="dropdown" aria-expanded="false">
                     What's New
-                  </button>
-
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="#">#TargetStyle</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Women's New Arrivals</a>
@@ -73,39 +81,68 @@
                     <a class="dropdown-item" href="#">Home New Arrivals</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Target Finds</a>
-                </div>
-            </div>
+                </ul>
+            </li>
 
-            <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                    data-bs-toggle="dropdown" aria-expanded="false">
                     Pickup & Delivery
-                  </button>
-
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <a class="dropdown-item" href="#">Order Pickup</a>
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <li><a class="dropdown-item" href="#">Order Pickup</a></li>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Same Day Delivery</a>
+                    <li><a class="dropdown-item" href="#">Same Day Delivery</a></li>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Drive Up</a>
-                </div>
-            </div>
+                    <li><a class="dropdown-item" href="#">Drive Up</a></li>
+                </ul>
+            </li>
 
         </ul>
 
+        <nav class="navbar-expand-lg">
+        <ul>
+            <form>
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search">
+                    <span class="input-group-text">
+                        <svg class="bi" width="24" height="24" fill="currentColor">
+                            <use xlink:href="assets/bootstrap-icons.svg#search" />
+                        </svg>
+                    </span>
+                </div>
 
-        <form>
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search">
-                <span class="input-group-text">
-                    <svg class="bi" width="32" height="32" fill="currentColor">
-                        <use xlink:href="assets/bootstrap-icons.svg#search"/>
-                      </svg>
-                </span>
-            </div>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                <li class="nav-item">
+                    <a href="" class="nav-link text-gray">
+                        <svg class="bi" width="24" height="24" fill="currentColor">
+                            <use xlink:href="assets/bootstrap-icons.svg#person-circle" />
+                        </svg>
+                    </a>
+                </li>
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
+                    <li><a class="dropdown-item" href="#">Shipping and Order Services</a></li>
+                    <div class="dropdown-divider"></div>
+                    <li><a class="dropdown-item" href="#">Target App</a></li>
+                    <div class="dropdown-divider"></div>
+                    <li><a class="dropdown-item" href="#">Pharmacy</a></li>
+                    <div class="dropdown-divider"></div>
+                    <li><a class="dropdown-item" href="#">Gift Ideas</a></li>
+                </ul>
+                </li>
 
-            <svg class="bi" width="32" height="32" fill="currentColor">
-                <use xlink:href="bootstrap-icons.svg#cart3"/>
-              </svg>
-        </form>
+                <li class="nav-item">
+                    <a href="" class="nav-link text-white">
+                        <svg class="bi" width="24" height="24" color="white">
+                            <use xlink:href="assets/bootstrap-icons.svg#cart3" />
+                        </svg>
+                    </a>
+                </li>
+            </form>
+        </ul>
+    </nav>
     </div>
 </nav>
