--- a/src/app/secondary header/secondarynavbar.component.html
+++ b/src/app/secondary header/secondarynavbar.component.html
@@ -1,13 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
+  <div class="container-fluid">
+    <ul>
       <a class="navbar-brand" href="#">You're Shopping</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+    </ul>
+    <ul>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Registry</a>
+            <a class="nav-link" aria-current="page" href="#">Registry</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Weekly Ad</a>
@@ -25,19 +29,29 @@
             <a class="nav-link" href="#">Orders</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">"heart"</a>
+            <a href="" class="nav-link text-gray">
+              <svg class="bi" width="16" height="16" fill="currentColor">
+                <use xlink:href="assets/bootstrap-icons.svg#suit-heart" />
+              </svg>
+            </a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
               More
             </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item" href="#">Shipping and Order Services</a></li>
+              <div class="dropdown-divider"></div>
+              <li><a class="dropdown-item" href="#">Target App</a></li>
+              <div class="dropdown-divider"></div>
+              <li><a class="dropdown-item" href="#">Pharmacy</a></li>
+              <div class="dropdown-divider"></div>
+              <li><a class="dropdown-item" href="#">Gift Ideas</a></li>
             </ul>
           </li>
         </ul>
       </div>
-    </div>
-  </nav>
+    </ul>
+  </div>
+</nav>
