--- a/src/app/header/topnavbar.component.html
+++ b/src/app/header/topnavbar.component.html
@@ -1,148 +1,7 @@
 <nav class="navbar navbar-light" style="background-color: #e40a0a;">
     <div class="container-fluid">
-        <ul class="nav">
-            <li class="nav-item">
-                <a href="" class="nav-link text-white">
-                    <img src="assets/Color-Target-logo.png" alt="" width="54" height="48">
-                </a>
-            </li>
+        <target-topleftside>Loading top left</target-topleftside>
 
-            
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                    data-bs-toggle="dropdown " aria-expanded="false">
-                    Categories
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Celebrate Black History Month</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Valentine's Day</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Health & Wellness</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Grocery</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Women</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Men</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Young Adult</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Kids</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Shoes</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Baby</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Home</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Patio & Garden</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Furniture</a>
-                </ul>
-            </li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    Deals
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Clearance</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Weekly Ad</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Top Deals</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">RedCard Exclusives</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Target Circle Offers</a>
-                </ul>
-            </li>
-
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    What's New
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">#TargetStyle</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Women's New Arrivals</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Beauty New Arrivals</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Kids' New Arrivals</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Men's New Arrivals</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Home New Arrivals</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Target Finds</a>
-                </ul>
-            </li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    Pickup & Delivery
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="#">Order Pickup</a></li>
-                    <div class="dropdown-divider"></div>
-                    <li><a class="dropdown-item" href="#">Same Day Delivery</a></li>
-                    <div class="dropdown-divider"></div>
-                    <li><a class="dropdown-item" href="#">Drive Up</a></li>
-                </ul>
-            </li>
-
-        </ul>
-
-        <nav class="navbar-expand-lg">
-        <ul>
-            <form>
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search">
-                    <span class="input-group-text">
-                        <svg class="bi" width="24" height="24" fill="currentColor">
-                            <use xlink:href="assets/bootstrap-icons.svg#search" />
-                        </svg>
-                    </span>
-                </div>
-
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                <li class="nav-item">
-                    <a href="" class="nav-link text-gray">
-                        <svg class="bi" width="24" height="24" fill="currentColor">
-                            <use xlink:href="assets/bootstrap-icons.svg#person-circle" />
-                        </svg>
-                    </a>
-                </li>
-                </a>
-                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="#">Shipping and Order Services</a></li>
-                    <div class="dropdown-divider"></div>
-                    <li><a class="dropdown-item" href="#">Target App</a></li>
-                    <div class="dropdown-divider"></div>
-                    <li><a class="dropdown-item" href="#">Pharmacy</a></li>
-                    <div class="dropdown-divider"></div>
-                    <li><a class="dropdown-item" href="#">Gift Ideas</a></li>
-                </ul>
-                </li>
-
-                <li class="nav-item">
-                    <a href="" class="nav-link text-white">
-                        <svg class="bi" width="24" height="24" color="white">
-                            <use xlink:href="assets/bootstrap-icons.svg#cart3" />
-                        </svg>
-                    </a>
-                </li>
-            </form>
-        </ul>
-    </nav>
+        <target-toprightside>Loading top right</target-toprightside>
     </div>
 </nav>
