Continued Modifying the nav bars

--- a/src/app/secondary header/secondary.leftside.component.html
+++ b/src/app/secondary header/secondary.leftside.component.html
@@ -1,7 +1,38 @@
-<ul>
-    <a class="navbar-brand" href="#">You're Shopping</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  </ul>
+<ul class="nav">
+
+  <style>
+    .nav-link {
+      color: gray
+    }
+  </style>
+  <li class="nav-item dropdown md-2 ">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"
+      aria-expanded="false">
+      Morgantown
+    </a>
+    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+      <p class="text-xl-center">Select a Store</p>
+      <li>
+        <p class="text-xl-center">
+          <svg class="bi" width="24" height="24" fill="currentColor">
+            <use xlink:href="assets/bootstrap-icons.svg#geo-alt-fill" />
+          </svg>
+          <a class="dropdown-item" href="#">Use my current location</a>
+        </p>
+      </li>
+      <div class="row">
+        <div class="col-xs-10 col-xs-offset-1">
+        <form action="#" method="#" role="search">
+        <div class="input-group">
+        <input class="form-control" placeholder="zip or city, state" name="srch-term" id="ed-srch-term" type="text">
+        <div class="input-group-btn">
+        <button type="submit" id="searchbtn">
+        Lookup</button>
+        </div>
+        </div>
+        </form>
+        </div>
+      </div>
+    </ul>
+  </li>
+</ul>
