--- a/src/app/header/leftside.component.html
+++ b/src/app/header/leftside.component.html
@@ -43,6 +43,14 @@
             <a class="dropdown-item" href="#">Patio & Garden</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Furniture</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Kitchen & Dining</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Toys</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Electronics</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Video Games</a>
         </ul>
     </li>
 
