Begun process adding new components (Assignment 2)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <target-topnavbar></target-topnavbar>
 <target-secondarynavbar></target-secondarynavbar>
+
+<a href="" class="nav-link text-white">
+    <img src="assets/target-val.png" alt="" width="1600">
+</a>
