Working on first card component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-<target-topnavbar></target-topnavbar>
-<target-secondarynavbar></target-secondarynavbar>
-
-<a href="" class="nav-link text-white">
-    <img src="assets/target-val.png" alt="" width="1600">
-</a>
+<target-topnavbar>Loading...</target-topnavbar>
+<target-secondarynavbar>Loading...</target-secondarynavbar>
+<target-circular-category-card>Loading...</target-circular-category-card>
