Made card not extend entire length of screen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <target-topnavbar>Loading...</target-topnavbar>
+
 <target-secondarynavbar>Loading...</target-secondarynavbar>
+
+
+<div class="container-fluid d-flex">
 <target-circular-category-card>Loading...</target-circular-category-card>
+</div>
