--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,6 @@
 
 <div class="container-fluid d-flex">
 <target-circular-category-card>Loading...</target-circular-category-card>
+<target-circular-category-card>Loading...</target-circular-category-card>
+<target-circular-category-card>Loading...</target-circular-category-card>
 </div>
