Began work on second new component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 
 <target-secondarynavbar>Loading...</target-secondarynavbar>
 
+<target-valentines-ad>Loading...</target-valentines-ad>
 
 <div class="container-fluid d-flex">
 <target-circular-category-card>Loading...</target-circular-category-card>
