--- a/src/app/homepagead/valentine.ad.component.html
+++ b/src/app/homepagead/valentine.ad.component.html
@@ -4,8 +4,8 @@
             <div class="bckgrnd-img text-center">
                 <img src="assets/target-val.png" class="rounded" alt="" width="1200px">
                 <div class="caption">
-                    <h5 class="card-link text-sm-left">
-                        <h1>Find Valentine's Day <br> decor, party supplies <br> & more.</h1>
+                    <h5 class="card-link">                        
+                        <p class="text-med-left">Find Valentine's Day <br> decor, party supplies <br> & more.</p>                       
                     </h5>
                     <a class="btn btn-primary" href="#" role="button">Valentine's Day</a>
                 </div>
