Added underline hover to ALL components

--- a/src/app/header/leftside.component.html
+++ b/src/app/header/leftside.component.html
@@ -7,7 +7,7 @@
 
 
     <li class="nav-item dropdown mt-2">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+        <a class="nav-link dropdown-toggle h5" href="#" id="navbarDropdownMenuLink" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
             Categories
         </a>
@@ -49,7 +49,7 @@
     </li>
 
     <li class="nav-item dropdown mt-2">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+        <a class="nav-link dropdown-toggle h5" href="#" id="navbarDropdownMenuLink" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
             Deals
         </a>
@@ -68,7 +68,7 @@
 
 
     <li class="nav-item dropdown mt-2">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+        <a class="nav-link dropdown-toggle h5" href="#" id="navbarDropdownMenuLink" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
             What's New
         </a>
@@ -90,7 +90,7 @@
     </li>
 
     <li class="nav-item dropdown mt-2">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+        <a class="nav-link dropdown-toggle h5" href="#" id="navbarDropdownMenuLink" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
             Pickup & Delivery
         </a>
