--- a/src/app/FeaturedCat Circular Cards/circular.card.component.css
+++ b/src/app/FeaturedCat Circular Cards/circular.card.component.css
@@ -13,6 +13,13 @@
     height: 220px;
 }
 
+p a{
+    text-decoration: none;
+}
+p a:hover{
+    text-decoration: underline;
+}
+
 .card{
     border-style: none;
 }
