--- a/src/app/header/toprightside.component.html
+++ b/src/app/header/toprightside.component.html
@@ -1,26 +1,16 @@
 <ul class="nav">  
 
     <form>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-16 mt-3">
-                    <div class="input-group">
-                        <input class="form-control py-2 rounded-pill mr-1 pr-5" type="Search" value="Search" id="example-search-input">
-                        <span class="input-group-text">
-                            <svg class="bi" width="24" height="24" fill="currentColor">
-                                <use xlink:href="assets/bootstrap-icons.svg#search" />
-                            </svg>
-                        </span>
-                        <span class="input-group-append">
-                            <button class="btn rounded-pill border-0 m1-n5" type="button">
-                                <i class="fa fa-search"></i>
-                            </button>
-                        </span>
-                    </div>
-                </div>
-            </div>
+        <div class="input-group mt-3">
+            <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="basic-addon1">
+            <span class="input-group-text">
+                <svg class="bi" width="24" height="20" fill="black">
+                    <use xlink:href="assets/bootstrap-icons.svg#search"/>
+                </svg>
+            </span>
         </div>
     </form>
+    
 
 
     <li class="nav-item dropdown">
