Begun work on 3rd component under big valentine ad

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,13 @@
 <target-valentines-ad>Loading...</target-valentines-ad>
 
 <div class="container-fluid d-flex">
+<target-valentines-boxcard>Loading...</target-valentines-boxcard>
+<target-valentines-boxcard>Loading...</target-valentines-boxcard>
+<target-valentines-boxcard>Loading...</target-valentines-boxcard>
+<target-valentines-boxcard>Loading...</target-valentines-boxcard>
+</div>
+
+<div class="container-fluid d-flex">
 <target-circular-category-card>Loading...</target-circular-category-card>
 <target-circular-category-card>Loading...</target-circular-category-card>
 <target-circular-category-card>Loading...</target-circular-category-card>
