--- a/src/app/header/leftside.component.html
+++ b/src/app/header/leftside.component.html
@@ -1,7 +1,7 @@
 <ul class="nav">
     <li class="nav-item">
         <a href="" class="nav-link text-white">
-            <img src="assets/Color-Target-logo.png" alt="" width="54" height="48">
+            <img src="assets/Color-Target-logo.png" alt="" width="54" height="44">
         </a>
     </li>
 
@@ -11,7 +11,9 @@
             data-bs-toggle="dropdown" aria-expanded="false">
             Categories
         </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+        <ul class="dropdown-menu cat-dropdown" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item main-menu" href="#"><strong>&lt; Main Menu</strong></a>
+            <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Celebrate Black History Month</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Valentine's Day</a>
@@ -45,6 +47,34 @@
             <a class="dropdown-item" href="#">Electronics</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Video Games</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Movies, Music & Books</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Sports & Outdoors</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Beauty</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Personal Care</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Health</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Pets</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Household Essentials</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Luggage</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">School & Office Supplies</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Party Supplies</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Bullseye's Playground</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Gift Ideas</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Gift Cards</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Clearance</a>
         </ul>
     </li>
 
