--- a/src/app/header/toprightside.component.html
+++ b/src/app/header/toprightside.component.html
@@ -33,7 +33,7 @@
         <div class="dropdown-divider"></div>
         <li>
             <a href="" class="nav-link text-white">
-                <img src="assets/target-circle.PNG" alt="" width="96" height="44">
+                <img src="assets/target-circle.png" alt="" width="84" height="22">
             </a>
         </li>
         <div class="dropdown-divider"></div>
