--- a/src/app/secondary header/secondary.leftside.component.html
+++ b/src/app/secondary header/secondary.leftside.component.html
@@ -9,10 +9,12 @@
       <p class="text-xl-center">Select a Store</p>
       <li>
         <p class="text-xl-center">
-          <svg class="bi" width="24" height="24" fill="currentColor">
-            <use xlink:href="assets/bootstrap-icons.svg#geo-alt-fill" />
-          </svg>
-          <a class="dropdown-item" href="#">Use my current location</a>
+          <a class="dropdown-item" href="#">
+            <svg class="bi" width="14" height="14" fill="currentColor">
+              <use xlink:href="assets/bootstrap-icons.svg#geo-alt-fill" />
+            </svg>
+            &nbsp; Use my current location
+          </a>
         </p>
       </li>
       <div class="row">
