--- a/src/app/secondary header/secondary.rightside.component.css
+++ b/src/app/secondary header/secondary.rightside.component.css
@@ -5,3 +5,11 @@ li a{
 li a:hover{
     text-decoration: underline;
 }
+
+.dropdown-menu{
+    width: 320px;
+    text-align: left;
+    position: absolute;
+    top: 62px; 
+    left: -250px;
+}
