Begun Updating angular components

--- a/src/app/FeaturedCat Circular Cards/circular.card.component.html
+++ b/src/app/FeaturedCat Circular Cards/circular.card.component.html
@@ -3,12 +3,12 @@
         <h5 class="card-title">
             <a href="" class="image-link">
                 <div class="text-center">
-                    <img src="assets/Valentines-Day-Target.png" class="rounded" alt="" width="200">
+                    <img src={{img}} class="rounded" alt="" width="200">
                 </div>
             </a>
         </h5>
         <p class="text-center">
-            <a href="#" class="card-link">Valentine's Day</a>
+            <a href="#" class="card-link">{{category}}</a>
         </p>
     </div>
 </div>
