--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,10 @@
 </div>
 
 <div class="container-fluid d-flex">
-<target-circular-category-card>Loading...</target-circular-category-card>
-<target-circular-category-card>Loading...</target-circular-category-card>
-<target-circular-category-card>Loading...</target-circular-category-card>
+<target-circular-category-card img="./assets/Circle-Comp/Valentines-Day-Target.png" category="Valentine's Day">Loading...</target-circular-category-card>
+<target-circular-category-card img="./assets/Circle-Comp/Circle-Women.png" category="Women's">Loading...</target-circular-category-card>
+<target-circular-category-card img="./assets/Circle-Comp/Circle-Men.png" category="Men's">Loading...</target-circular-category-card>
+<target-circular-category-card img="./assets/Circle-Comp/Circle-Kids.png" category="Kids'">Loading...</target-circular-category-card>
+<target-circular-category-card img="./assets/Circle-Comp/Circle-Baby.png" category="Baby">Loading...</target-circular-category-card>
+<target-circular-category-card img="./assets/Circle-Comp/Circle-Home.png" category="Home">Loading...</target-circular-category-card>
 </div>
