--- a/src/app/homepagead/valentine.boxcard.component.html
+++ b/src/app/homepagead/valentine.boxcard.component.html
@@ -3,12 +3,12 @@
         <h5 class="card-title">
             <a href="" class="image-link">
                 <div class="text-center">
-                    <img src="assets/target-val-ad.png" class="rounded" alt="" width="256">
+                    <img src={{img}} class="rounded" alt="" width="256">
                 </div>
             </a>
         </h5>
         <p class="text-center h4">
-            <a href="#" class="card-link">Valentine's Day <br> Gift Ideas</a>
+            <a href="#" class="card-link">{{title}}<br>{{description}}</a>
         </p>
     </div>
 </div>
