Finished Assignment 3 requirements for first comp

--- a/src/app/homepagead/valentine.ad.component.html
+++ b/src/app/homepagead/valentine.ad.component.html
@@ -2,7 +2,7 @@
     <div class="card-body valentine-ad">
         <a href="" class="image-link">
             <div class="bckgrnd-img text-center">
-                <img src="assets/target-val.png" class="rounded" alt="" width="1200px">
+                <img src="assets/Val-Ad/target-val.png" class="rounded" alt="" width="1200px">
                 <div class="caption">
                     <h5 class="card-link">                        
                         <p class="text-med-left">Find Valentine's Day <br> decor, party supplies <br> & more.</p>                       
