--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,17 +5,25 @@
 <target-valentines-ad>Loading...</target-valentines-ad>
 
 <div class="container-fluid d-flex">
-<target-valentines-boxcard>Loading...</target-valentines-boxcard>
-<target-valentines-boxcard>Loading...</target-valentines-boxcard>
-<target-valentines-boxcard>Loading...</target-valentines-boxcard>
-<target-valentines-boxcard>Loading...</target-valentines-boxcard>
+    <div *ngFor="let boxcard_comp of boxcards">
+        <target-valentines-boxcard img={{boxcard_comp.img}} title={{boxcard_comp.title}}
+            description={{boxcard_comp.description}}>
+            Loading...
+        </target-valentines-boxcard>
+    </div>
 </div>
 
 <div class="container-fluid d-flex">
-<target-circular-category-card img="./assets/Circle-Comp/Valentines-Day-Target.png" category="Valentine's Day">Loading...</target-circular-category-card>
-<target-circular-category-card img="./assets/Circle-Comp/Circle-Women.png" category="Women's">Loading...</target-circular-category-card>
-<target-circular-category-card img="./assets/Circle-Comp/Circle-Men.png" category="Men's">Loading...</target-circular-category-card>
-<target-circular-category-card img="./assets/Circle-Comp/Circle-Kids.png" category="Kids'">Loading...</target-circular-category-card>
-<target-circular-category-card img="./assets/Circle-Comp/Circle-Baby.png" category="Baby">Loading...</target-circular-category-card>
-<target-circular-category-card img="./assets/Circle-Comp/Circle-Home.png" category="Home">Loading...</target-circular-category-card>
+    <target-circular-category-card img="./assets/Circle-Comp/Valentines-Day-Target.png" category="Valentine's Day">
+        Loading...</target-circular-category-card>
+    <target-circular-category-card img="./assets/Circle-Comp/Circle-Women.png" category="Women's">
+        Loading...</target-circular-category-card>
+    <target-circular-category-card img="./assets/Circle-Comp/Circle-Men.png" category="Men's">
+        Loading...</target-circular-category-card>
+    <target-circular-category-card img="./assets/Circle-Comp/Circle-Kids.png" category="Kids'">
+        Loading...</target-circular-category-card>
+    <target-circular-category-card img="./assets/Circle-Comp/Circle-Baby.png" category="Baby">
+        Loading...</target-circular-category-card>
+    <target-circular-category-card img="./assets/Circle-Comp/Circle-Home.png" category="Home">
+        Loading...</target-circular-category-card>
 </div>
