--- a/src/app/homepagead/valentine.boxcard.component.html
+++ b/src/app/homepagead/valentine.boxcard.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <div class="card-body round-card">
+    <div class="card-body">
         <h5 class="card-title">
             <a href="" class="image-link">
                 <div class="text-center">
@@ -7,8 +7,10 @@
                 </div>
             </a>
         </h5>
-        <p class="text-center h4">
-            <a href="#" class="card-link">{{title}}<br>{{description}}</a>
+        <p class="text-center">
+            <a href="#" class="card-link h4">{{title}}<br>
+                <a href="#" class="card-link description h6">{{description}}</a>
+            </a>
         </p>
     </div>
 </div>
