Set up ability to use a list for other component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,17 @@
 </div>
 
 <div class="container-fluid d-flex">
+<!--
+    ALL OF THIS IS TEMPORARILY COMMENTED OUT BECAUSE IT IS STEALING THE FEATURES OF THE OTHER CARDS
+    WILL FULLY IMPLEMENT THIS PART BY NEXT WEEK :)
+
+     <div *ngFor="let circle_card of circular_cards_list">
+        <target-valentines-boxcard img={{circle_card.img}} title={{circle_card.category}}>
+            Loading...
+        </target-valentines-boxcard>
+    </div>
+-->
+
     <target-circular-category-card img="./assets/Circle-Comp/Valentines-Day-Target.png" category="Valentine's Day">
         Loading...</target-circular-category-card>
     <target-circular-category-card img="./assets/Circle-Comp/Circle-Women.png" category="Women's">
