Final changes before assingment 3 submission

--- a/src/app/homepagead/valentine.boxcard.component.html
+++ b/src/app/homepagead/valentine.boxcard.component.html
@@ -8,9 +8,8 @@
             </a>
         </h5>
         <p class="text-center">
-            <a href="#" class="card-link h4">{{title}}<br>
-                <a href="#" class="card-link description h6">{{description}}</a>
-            </a>
+            <a href="#" class="card-link h4">{{title}}<br></a>
+                <a href="#" class="card-link description p">{{description}}</a>          
         </p>
     </div>
 </div>
