Finished first routing page

--- a/src/app/header/leftside.component.html
+++ b/src/app/header/leftside.component.html
@@ -12,9 +12,9 @@
             Categories
         </a>
         <ul class="dropdown-menu cat-dropdown" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item main-menu" href="#"><strong>&lt; Main Menu</strong></a>
+            <a routerLink="" class="dropdown-item main-menu" href="#"><strong>&lt; Main Menu</strong></a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Celebrate Black History Month</a>
+            <a routerLink="Black-History" class="dropdown-item" href="#">Celebrate Black History Month</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Valentine's Day</a>
             <div class="dropdown-divider"></div>
