Adjusted the layout of the home page

--- a/src/app/Routing/home-layout.component.html
+++ b/src/app/Routing/home-layout.component.html
@@ -1,16 +1,19 @@
-<target-valentines-ad>Loading...</target-valentines-ad>
+<div class="row">
+    <div class="col-2"></div>
+    <div class="col-8">
+        <target-valentines-ad>Loading...</target-valentines-ad>
 
-<div class="container-fluid d-flex">
-    <div *ngFor="let boxcard_comp of boxcards">
-        <target-valentines-boxcard img={{boxcard_comp.img}} title={{boxcard_comp.title}}
-            description={{boxcard_comp.description}}>
-            Loading...
-        </target-valentines-boxcard>
-    </div>
-</div>
+        <div class="container-fluid d-flex">
+            <div *ngFor="let boxcard_comp of boxcards">
+                <target-valentines-boxcard img={{boxcard_comp.img}} title={{boxcard_comp.title}}
+                    description={{boxcard_comp.description}}>
+                    Loading...
+                </target-valentines-boxcard>
+            </div>
+        </div>
 
-<div class="container-fluid d-flex">
-<!--
+        <div class="container-fluid d-flex">
+            <!--
     ALL OF THIS IS TEMPORARILY COMMENTED OUT BECAUSE IT IS STEALING THE FEATURES OF THE OTHER CARDS
     WILL FULLY IMPLEMENT THIS PART BY NEXT WEEK :)
 
@@ -21,16 +24,20 @@
     </div>
 -->
 
-    <target-circular-category-card img="./assets/Circle-Comp/Valentines-Day-Target.png" category="Valentine's Day">
-        Loading...</target-circular-category-card>
-    <target-circular-category-card img="./assets/Circle-Comp/Circle-Women.png" category="Women's">
-        Loading...</target-circular-category-card>
-    <target-circular-category-card img="./assets/Circle-Comp/Circle-Men.png" category="Men's">
-        Loading...</target-circular-category-card>
-    <target-circular-category-card img="./assets/Circle-Comp/Circle-Kids.png" category="Kids'">
-        Loading...</target-circular-category-card>
-    <target-circular-category-card img="./assets/Circle-Comp/Circle-Baby.png" category="Baby">
-        Loading...</target-circular-category-card>
-    <target-circular-category-card img="./assets/Circle-Comp/Circle-Home.png" category="Home">
-        Loading...</target-circular-category-card>
+            <target-circular-category-card img="./assets/Circle-Comp/Valentines-Day-Target.png"
+                category="Valentine's Day">
+                Loading...</target-circular-category-card>
+            <target-circular-category-card img="./assets/Circle-Comp/Circle-Women.png" category="Women's">
+                Loading...</target-circular-category-card>
+            <target-circular-category-card img="./assets/Circle-Comp/Circle-Men.png" category="Men's">
+                Loading...</target-circular-category-card>
+            <target-circular-category-card img="./assets/Circle-Comp/Circle-Kids.png" category="Kids'">
+                Loading...</target-circular-category-card>
+            <target-circular-category-card img="./assets/Circle-Comp/Circle-Baby.png" category="Baby">
+                Loading...</target-circular-category-card>
+            <target-circular-category-card img="./assets/Circle-Comp/Circle-Home.png" category="Home">
+                Loading...</target-circular-category-card>
+        </div>
+    </div>
+    <div class="col-2"></div>
 </div>
