--- a/src/app/header/leftside.component.html
+++ b/src/app/header/leftside.component.html
@@ -1,6 +1,6 @@
 <ul class="nav">
     <li class="nav-item">
-        <a href="" class="nav-link text-white">
+        <a routerLink="" href="" class="nav-link text-white">
             <img src="assets/Color-Target-logo.png" alt="" width="54" height="44">
         </a>
     </li>
