--- a/src/app/header/leftside.component.html
+++ b/src/app/header/leftside.component.html
@@ -16,9 +16,7 @@
             <div class="dropdown-divider"></div>
             <a routerLink="Black-History" class="dropdown-item" href="#">Celebrate Black History Month</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Valentine's Day</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Health & Wellness</a>
+            <a class="dropdown-item" href="#">Easter</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Grocery</a>
             <div class="dropdown-divider"></div>
