--- a/src/app/Routing/easter-route.component.html
+++ b/src/app/Routing/easter-route.component.html
@@ -2,9 +2,9 @@
     <div class="col-2"></div>
 
     <div class="col-8">
-        This is the Black History Month Page
+        This is the Easter Page
         <br><br><br>
-        Throwing text to show it's a different page
+        (But it is still February)
     </div>
     
     <div class="col-2"></div>
