--- a/src/app/Routing/grocery-route.component.html
+++ b/src/app/Routing/grocery-route.component.html
@@ -2,9 +2,9 @@
     <div class="col-2"></div>
 
     <div class="col-8">
-        This is the Black History Month Page
+        This is the Grocery landing page
         <br><br><br>
-        Throwing text to show it's a different page
+        Imagine like... bananas and stuff here
     </div>
     
     <div class="col-2"></div>
