--- a/src/app/header/leftside.component.html
+++ b/src/app/header/leftside.component.html
@@ -14,64 +14,94 @@
         <ul class="dropdown-menu cat-dropdown" aria-labelledby="navbarDropdownMenuLink">
             <a routerLink="" class="dropdown-item main-menu" href="#"><strong>&lt; Main Menu</strong></a>
             <div class="dropdown-divider"></div>
+
             <a routerLink="Black-History" class="dropdown-item" href="#">Celebrate Black History Month</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Easter</a>
+
+            <a routerLink="Easter" class="dropdown-item" href="#">Easter</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Grocery</a>
+
+            <a routerLink="Grocery" class="dropdown-item" href="#">Grocery</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Women</a>
+
+            <a routerLink="Women" class="dropdown-item" href="#">Women</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Men</a>
+
+            <a routerLink="Men" class="dropdown-item" href="#">Men</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Young Adult</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Kids</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Shoes</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Baby</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Home</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Patio & Garden</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Furniture</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Kitchen & Dining</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Toys</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Electronics</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Video Games</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Movies, Music & Books</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Sports & Outdoors</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Beauty</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Personal Care</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Health</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Pets</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Household Essentials</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Luggage</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">School & Office Supplies</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Party Supplies</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Bullseye's Playground</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Gift Ideas</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Gift Cards</a>
             <div class="dropdown-divider"></div>
+
             <a class="dropdown-item" href="#">Clearance</a>
         </ul>
     </li>
