--- a/src/app/Routing/grocery-route.component.html
+++ b/src/app/Routing/grocery-route.component.html
@@ -2,10 +2,14 @@
     <div class="col-2"></div>
 
     <div class="col-8">
-        This is the Grocery landing page
-        <br><br><br>
-        Imagine like... bananas and stuff here
+        <p class="text-center h2">Grocery</p>
+        <p class="fs-6 info-text text-center">
+            <a class="url" href="#">Target</a>
+            / Grocery (11871)
+        </p>
+
+        <target-grocery-box-ad></target-grocery-box-ad>
     </div>
-    
+
     <div class="col-2"></div>
 </div>
