--- a/src/app/GroceryPage/grocery.box.ad.component.html
+++ b/src/app/GroceryPage/grocery.box.ad.component.html
@@ -1,9 +1,11 @@
 <div class="card" style="width: 18rem;">
+  <a href="#" class="url">
     <img src="./assets/Grocery/Target.Grocery.Deals.jpeg" class="card-img-top" alt="...">
     <div class="card-body">
       <p class="h5 non-red-text">
-          All Grocery
-          <a class="red-text">Deals</a>
-        </p>
+        All Grocery
+        <span class="red-text">Deals</span>
+      </p>
     </div>
-  </div>
+  </a>
+</div>
