--- a/src/app/Routing/grocery-route.component.html
+++ b/src/app/Routing/grocery-route.component.html
@@ -2,14 +2,25 @@
     <div class="col-2"></div>
 
     <div class="col-8">
-        <p class="text-center h2">Grocery</p>
+
+        <p class="text-center h4">Grocery</p>
         <p class="fs-6 info-text text-center">
             <a class="url" href="#">Target</a>
             / Grocery (11871)
         </p>
 
-        <target-grocery-box-ad></target-grocery-box-ad>
-    </div>
+        <target-grocery-box-ad></target-grocery-box-ad><br>
+        
+        <target-grocery-ideas-box-ad></target-grocery-ideas-box-ad><br>
 
-    <div class="col-2"></div>
-</div>
+        <span class="left h5">Grocery Deals</span>
+        <span class="right"><a class="url" href="#">Shop all</a></span><br><br>
+        
+        <target-grocery-deals></target-grocery-deals>
+
+
+
+
+
+        <div class="col-2"></div>
+    </div>
