--- a/src/app/Routing/grocery-route.component.css
+++ b/src/app/Routing/grocery-route.component.css
@@ -10,3 +10,13 @@
 .url:hover{
     text-decoration: none;
 }
+
+.left{
+    float: left;
+    text-align: left;
+}
+
+.right{
+    float: right;
+    text-align: right;
+}
