--- a/src/app/Routing/women-route.component.html
+++ b/src/app/Routing/women-route.component.html
@@ -2,10 +2,14 @@
     <div class="col-2"></div>
 
     <div class="col-8">
-        This is the Women Page
-        <br><br><br>
-        Options for clothes, shoes, other subcategories
-    </div>
+        
+        <p class="text-center h4">Grocery</p>
+        <p class="fs-6 info-text text-center">
+            <a class="url" href="#">Target</a>
+            / Women (25026)
+        </p>
+
+        <target-women-whats-latest></target-women-whats-latest><br>
     
     <div class="col-2"></div>
 </div>
