Finished Women Page (2 of 6 components)

--- a/src/app/Routing/women-route.component.html
+++ b/src/app/Routing/women-route.component.html
@@ -10,6 +10,8 @@
         </p>
 
         <target-women-whats-latest></target-women-whats-latest><br>
+
+        <target-women-style-boost></target-women-style-boost>
     
     <div class="col-2"></div>
 </div>
