Created 6th component (4 on grocery page)

--- a/src/app/Routing/grocery-route.component.html
+++ b/src/app/Routing/grocery-route.component.html
@@ -13,6 +13,8 @@
         
         <target-grocery-ideas-box-ad></target-grocery-ideas-box-ad><br>
 
+        <target-grocery-buttons-background></target-grocery-buttons-background><br>
+
         <span class="left h5">Grocery Deals</span>
         <span class="right"><a class="url" href="#">Shop all</a></span><br><br>
         
