--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<target-user-info>Loading...</target-user-info>
+
 <target-topnavbar>Loading...</target-topnavbar>
 
 <target-secondarynavbar>Loading...</target-secondarynavbar>
