--- a/src/app/homepagead/add-card/add-card.component.html
+++ b/src/app/homepagead/add-card/add-card.component.html
@@ -18,7 +18,7 @@
                         <input type="text" class="form-control" ngModel name="description">
                 </div>
 
-                <button class="btn btn-light" type="submit">
+                <button class="btn.light" type="submit">
                     Add Boxcard
                 </button>
             </form>
